# miso-fullstack

./: .ghc.environment.x86_64-linux-8.4.3  .gitignore  README.md  build-ghcjs.sh  cabal-ghcjs.project  cabal.project  defaults.cabal  start-backend.sh  start-frontend.sh
backend/: Main.hs  backend.cabal
common/: common.cabal
frontend/: LICENSE  Main.hs  frontend.cabal
